
# ##########################################################
# Package

[package]

authors = [
	"Matt Wilson <matthew@synesis.com.au>",
]
description = "Pantheios (for Rust)"
edition = "2021"
homepage = "https://github.com/synesissoftware/Pantheios.Rust"
license = "BSD-3-Clause"
name = "pantheios"
readme = "README.md"
version = "0.0.0"


# ##########################################################
# Targets

[lib]
name = "pantheios"
path = "src/lib.rs"


# ##########################################################
# Features

[features]


# ##########################################################
# Dependencies

[dependencies]


[dev-dependencies]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

